set up routing and protect home for authenticated users

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.16.2",
         "fb": "^2.0.0",
         "net": "^1.0.2",
+        "simple-vue-validator": "^0.13.4",
         "tls": "0.0.1",
         "vue": "^2.3.3",
         "vue-axios": "^2.0.2",
